modified and centered some elements

--- a/campaign.html
+++ b/campaign.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>SOA</title>
+    <link rel="icon" type="image/png" sizes="480x304" href="assets/img/My%20project%201.png">
+    <link rel="icon" type="image/png" sizes="480x304" href="assets/img/My%20project%201.png">
+    <link rel="icon" type="image/png" sizes="480x304" href="assets/img/My%20project%201.png">
+    <link rel="icon" type="image/png" sizes="480x304" href="assets/img/My%20project%201.png">
+    <link rel="icon" type="image/png" sizes="480x304" href="assets/img/My%20project%201.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/line-awesome.min.css">
@@ -23,19 +28,19 @@
                     <path d="M3 17.0645C2.44772 17.0645 2 17.5122 2 18.0645C2 18.6167 2.44772 19.0645 3 19.0645H21C21.5523 19.0645 22 18.6167 22 18.0645C22 17.5122 21.5523 17.0645 21 17.0645H3Z" fill="currentColor"></path>
                 </svg></button>
             <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav mw-100 w-100 d-flex justify-content-md-end px-5 text-uppercase gap-md-4" id="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active text-light fs-5" href="index.html">HOME</a></li>
-                    <li class="nav-item dropdown text-light"><a class="dropdown-toggle nav-link text-light fs-5" aria-expanded="false" data-bs-toggle="dropdown" href="#">about us</a>
-                        <div class="dropdown-menu bg-dark border-0 rounded-0 p-0" id="dropdown-menu-1"><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#">who we are</a><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#our_services">our services</a></div>
+                <ul class="navbar-nav mw-100 w-100 d-flex justify-content-md-end py-5 py-sm-5 py-md-0 px-5 text-uppercase gap-4 gap-md-4" id="navbar-nav">
+                    <li class="nav-item"><a class="nav-link active fs-5" id="nav-link" href="index.html">home</a></li>
+                    <li class="nav-item dropdown text-light"><a class="dropdown-toggle nav-link fs-5" aria-expanded="false" data-bs-toggle="dropdown" href="#">about us</a>
+                        <div class="dropdown-menu bg-dark border-0 rounded-0 p-0 text-center text-md-start" id="dropdown-menu-1"><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#">who we are</a><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#our_services">our services</a></div>
                     </li>
-                    <li class="nav-item dropdown text-light"><a class="dropdown-toggle nav-link text-light fs-5" aria-expanded="false" data-bs-toggle="dropdown" href="#">programmes</a>
-                        <div class="dropdown-menu bg-dark border-0 rounded-0 p-0" id="dropdown-menu-2"><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#our_campaign">our CAMPAIGN&nbsp;</a><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#our_events">events</a><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#gallery">gallery</a></div>
+                    <li class="nav-item dropdown text-light"><a class="dropdown-toggle nav-link fs-5" aria-expanded="false" data-bs-toggle="dropdown" href="#">programmes</a>
+                        <div class="dropdown-menu bg-dark border-0 rounded-0 p-0 text-center text-md-start" id="dropdown-menu-2"><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#our_campaign">our CAMPAIGN&nbsp;</a><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#our_events">events</a><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#gallery">gallery</a></div>
                     </li>
-                    <li class="nav-item dropdown text-light"><a class="dropdown-toggle nav-link text-light fs-5" aria-expanded="false" data-bs-toggle="dropdown" href="#">updates</a>
-                        <div class="dropdown-menu bg-dark border-0 rounded-0 p-0" id="dropdown-menu-3"><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#blogs_and_update">news &amp; articles</a><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#our_store">our store</a><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#faqs">faqs</a></div>
+                    <li class="nav-item dropdown text-light"><a class="dropdown-toggle nav-link fs-5" aria-expanded="false" data-bs-toggle="dropdown" href="#">updates</a>
+                        <div class="dropdown-menu bg-dark border-0 rounded-0 p-0 text-center text-md-start" id="dropdown-menu-3"><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#blogs_and_update">news &amp; articles</a><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#our_store">our store</a><a class="dropdown-item text-light text-uppercase p-4 fs-5" href="#faqs">faqs</a></div>
                     </li>
-                    <li class="nav-item dropdown text-light"><a class="dropdown-toggle nav-link text-light fs-5" aria-expanded="false" data-bs-toggle="dropdown" href="#">contact us</a>
-                        <div class="dropdown-menu bg-dark border-0 rounded-0 p-0" id="dropdown-menu-4"><a class="dropdown-item p-3 text-light text-uppercase p-4 fs-5" href="#">contact</a><a class="dropdown-item p-3 text-light text-uppercase p-4 fs-5" href="#become_a_volunteer">join us</a><a class="dropdown-item p-3 text-light text-uppercase p-4 fs-5" href="#support_us">donate</a></div>
+                    <li class="nav-item dropdown text-light"><a class="dropdown-toggle nav-link fs-5" aria-expanded="false" data-bs-toggle="dropdown" href="#">contact us</a>
+                        <div class="dropdown-menu bg-dark border-0 rounded-0 p-0 text-center text-md-start" id="dropdown-menu-4"><a class="dropdown-item p-3 text-light text-uppercase p-4 fs-5" href="#">contact</a><a class="dropdown-item p-3 text-light text-uppercase p-4 fs-5" href="#become_a_volunteer">join us</a><a class="dropdown-item p-3 text-light text-uppercase p-4 fs-5" href="#support_us">donate</a></div>
                     </li>
                 </ul>
             </div>
@@ -205,7 +210,7 @@
             <section class="py-4 py-xl-5 mb-3">
                 <div class="container px-0">
                     <div class="bg-light border rounded border-0 border-light d-flex flex-column justify-content-between align-items-center flex-lg-row bg-transparent">
-                        <div class="text-center text-lg-start py-3 py-lg-1">
+                        <div class="text-center text-lg-start py-3 py-lg-1 mb-3">
                             <h2 class="fw-bold mb-2 fs-1"><strong>Newsletter</strong></h2>
                             <p class="mb-0 fs-4">sign up for regular newsletter and stsy up to date</p>
                         </div>
@@ -223,7 +228,7 @@
                         <p class="fs-4">Eu eleifend hendrerit, morbi curae tristique. Tempus diam senectus nibh nulla feugiat sociosqu, at rutrum fames. Nunc integer class proin.</p>
                     </div>
                     <hr>
-                    <div>
+                    <div class="d-flex justify-content-center justify-content-md-start justify-content-sm-center">
                         <ul class="d-flex list-unstyled gap-3 justify-content-md-start justify-content-sm-center">
                             <li><i class="la la-linkedin-square fs-1"></i></li>
                             <li><i class="la la-facebook-square fs-1"></i></li>
@@ -260,7 +265,7 @@
                             </svg><a class="text-light text-decoration-none" href="#our_event">Recent Events</a></li>
                     </ul>
                 </div>
-                <div class="col-md-4 d-flex flex-column align-items-sm-center align-items-md-start gap-4">
+                <div class="col-md-4 d-flex flex-column align-items-center align-items-sm-center align-items-md-start gap-4">
                     <p class="text-light h1 fs-2 text-xl-start text-sm-center">Organization info</p>
                     <div class="d-flex gap-3 px-3 justify-content-sm-center justify-content-md-start align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-telephone fs-3">
                             <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"></path>
